--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     compile 'com.github.gabrielemariotti.cards:cardslib-cards:2.0.1'
     compile 'com.github.gabrielemariotti.cards:cardslib-recyclerview:2.0.1'
     compile 'com.github.orangegangsters:swipy:1.2.0@aar'
+    compile 'com.github.dexafree:materiallist:2.3.2'
 }
