--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     compile 'com.github.gabrielemariotti.cards:cardslib-recyclerview:2.0.1'
     compile 'com.github.orangegangsters:swipy:1.2.0@aar'
     compile 'com.github.dexafree:materiallist:2.3.2'
+    compile 'jp.wasabeef:recyclerview-animators:1.1.2@aar'
 }
